# Jarvis

./: AI_INTEGRATION.md  AI_INTELLIGENT_CONTROL.md  App.xaml  App.xaml.cs  BUGFIX.md  CHANGELOG.md  COMPACT_DESIGN.md  COMPARISON.md  DESIGN.md  FULL_CONTROL.md  JarvisApp.csproj  JarvisApp.sln  LOCAL_VOICE_CLONE_SETUP.md  MainWindow.xaml  OLLAMA_SETUP.md  QUICKSTART.md  README.md  Start-JarvisApp.bat  Start-JarvisApp.ps1  ULTIMATE_FEATURES.md  app.manifest  build.bat  check_german_voices.ps1  convert_daniel_sample.py  install_ollama.bat  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
JarvisApp/: App.xaml  App.xaml.cs  JarvisApp.csproj  MainWindow.xaml  MainWindow.xaml.cs  app.manifest
JarvisApp/Services/: AIService.cs  AutomationService.cs  CommandService.cs  IntelligentCommandService.cs  SpeechService.cs
jarvis/: __init__.py  __main__.py  ai.py  audio_utils.py  commands.py  main.py  voice.py  windows_integration.py
jarvis_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/: local_tts_server.py
