[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-ai"
version = "0.1.0"
description = "Local AI assistant inspired by Iron Man"
authors = [
    {name = "Julian333333", email = "your.email@example.com"},
]
dependencies = [
    "PyQt5>=5.15.9",
    "speechrecognition>=3.10.0",
    "pyttsx3>=2.90",
    "requests>=2.31.0",
    "pywin32>=306",
]

[project.scripts]
jarvis = "jarvis.__main__:main"

[tool.setuptools]
packages = ["jarvis"]